# project-clickup

./: .gitignore  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  pyproject.toml  setup_venv.sh
backend/app/: main.py
backend/app/api/: api.py  auth.py  deps.py  organizations.py  tasks.py  users.py
backend/app/core/: config.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  approval.py  chat.py  document.py  event.py  organization.py  task.py  user.py
backend/app/schemas/: auth.py
backend/app/services/: organization.py  task.py  user.py
backend/app/utils/: id.py
client/: .gitignore  Dockerfile  Makefile  bun.lockb  instructions.md  package-lock.json  package.json
client/src/: middleware.ts
client/src/app/: globals.css  layout.tsx  page.tsx
client/src/app/(auth)/: layout.tsx
client/src/app/(dashboard)/: layout.tsx
client/src/app/dashboard/: page.tsx
client/src/app/signup/: page.tsx
client/src/components/: CommandPalette.tsx  index.ts
client/src/components/auth/: LoginForm.tsx  SignupForm.tsx
client/src/components/dashboard/: DashboardLayout.tsx  NewProjectModal.tsx  ProjectCard.tsx  TasksOverview.tsx
client/src/components/layout/: AppLayout.tsx  Header.tsx  Layout.tsx  Sidebar.tsx  index.ts
client/src/components/list/: ListDialog.tsx
client/src/components/organizations/: NewWorkspaceForm.tsx  OrganizationDialog.tsx  index.ts  organization-header.tsx  organization-sidebar.tsx
client/src/components/space/: BoardView.tsx  (+6 more)
client/src/types/: index.ts  project.ts
prisma/: schema.prisma
(+36 files in other folders)
